--- a/Part 3 - Modeling.ipynb
+++ b/Part 3 - Modeling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,79 @@
     "\n",
     "# Get all the spectrograms in the Data Folder\n",
     "# then put in a numpy array\n",
-    "# Get labels too\n",
+    "# Get labels too"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(data_folder, divisor, start_at = \"none\", stop = \"none\"):\n",
+    "    lis = bash('ls '+ data_folder)\n",
+    "    \n",
+    "    start_flag = 0\n",
+    "    img_array = []\n",
+    "    labels = []\n",
+    "    \n",
+    "    if start_at == \"none\":\n",
+    "        start_flag = 1\n",
     "\n",
+    "    for path in lis:\n",
+    "        path_ = data_folder+ path\n",
+    "        \n",
+    "        if path_ == start_at:\n",
+    "            start_flag = 1\n",
+    "        \n",
+    "        if start_flag == 0:\n",
+    "            continue\n",
+    "\n",
+    "        if path_ == stop:\n",
+    "            break;\n",
+    "\n",
+    "        img = cv2.imread(path_,1)\n",
+    "        img_norm = img/255\n",
+    "        img_norm.resize(int(513/divisor),int(800/divisor),3)\n",
+    "        img_array.append(img_norm)\n",
+    "        labels.append(path[0:6])\n",
+    "    return img_array, labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_img_array_to_X(img_array):\n",
+    "    X = np.array(img_array)\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def labels_onehot(labels):\n",
+    "    le = LabelEncoder()\n",
+    "    y_cat = le.fit_transform(labels)\n",
+    "    y_cat = y_cat.reshape(-1,1)\n",
+    "    \n",
+    "    ohe = OneHotEncoder()\n",
+    "    y_cat = ohe.fit_transform(y_cat).toarray()\n",
+    "    \n",
+    "    return y_cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def load_process_data(data_folder, divisor, start_at = \"none\", stop = \"none\"):\n",
     "    lis = bash('ls '+ data_folder)\n",
     "    \n",
@@ -77,11 +148,6 @@
     "        \n",
     "        \n",
     "        if path_ == stop:\n",
-    "#             img = cv2.imread(path_,1)\n",
-    "#             img_norm = img/255\n",
-    "#             img_norm.resize(int(513/divisor),int(800/divisor),3)\n",
-    "#             img_array.append(img_norm)\n",
-    "#             labels.append(path[0:6])\n",
     "            break;\n",
     "\n",
     "        img = cv2.imread(path_,1)\n",
@@ -113,8 +179,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First process"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2508, 256, 400, 3)"
+       "(2507, 256, 400, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,12 +227,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Model"
+    "Updated Process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array2 ,labels2 = load_data(data_folder=\"../Data/\", divisor = 2,start_at = 'none',stop = '../Data/100_mp-000.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X2 = convert_img_array_to_X(array2)\n",
+    "y2 = labels_onehot(labels2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train2, X_test2, y_train2, y_test2 = train_test_split(X2,y2,test_size = 0.1,stratify = y2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y2.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +297,7 @@
     "                         kernel_size = 5,        # height/width of filter\n",
     "                         padding = \"same\",\n",
     "                         activation='relu',      # activation function \n",
-    "                         input_shape=(X_test[0].shape))) # shape of input (dimensions of training image)\n",
+    "                         input_shape=(X_test2[0].shape))) # shape of input (dimensions of training image)\n",
     "\n",
     "model2.add(Conv2D(16, kernel_size = 5, activation='relu'))\n",
     "model2.add(MaxPooling2D(pool_size=(2,2)))\n",
@@ -181,14 +309,12 @@
     "\n",
     "model2.add(Flatten())\n",
     "model2.add(Activation('relu'))\n",
-    "# model2.add(Dense(128, activation='relu'))\n",
-    "# model2.add(Dropout(0.5))\n",
-    "model2.add(Dense(6, activation='softmax'))"
+    "model2.add(Dense(y2.shape[1], activation='softmax'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -216,10 +342,10 @@
       "_________________________________________________________________\n",
       "activation_1 (Activation)    (None, 94672)             0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 6)                 568038    \n",
+      "dense_1 (Dense)              (None, 9)                 852057    \n",
       "=================================================================\n",
-      "Total params: 576,502\n",
-      "Trainable params: 576,502\n",
+      "Total params: 860,521\n",
+      "Trainable params: 860,521\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -231,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,44 +377,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 2257 samples, validate on 251 samples\n",
+      "Train on 3446 samples, validate on 383 samples\n",
       "Epoch 1/100\n",
-      "2257/2257 [==============================] - 22s 10ms/step - loss: 0.0368 - acc: 0.9911 - val_loss: 0.4418 - val_acc: 0.8845\n",
+      "3446/3446 [==============================] - 38s 11ms/step - loss: 1.7396 - acc: 0.3825 - val_loss: 1.0319 - val_acc: 0.6345\n",
       "Epoch 2/100\n",
-      "2257/2257 [==============================] - 22s 10ms/step - loss: 0.0667 - acc: 0.9778 - val_loss: 0.4135 - val_acc: 0.8606\n",
+      "3446/3446 [==============================] - 33s 10ms/step - loss: 0.7017 - acc: 0.7690 - val_loss: 0.5627 - val_acc: 0.8094\n",
       "Epoch 3/100\n",
-      "2257/2257 [==============================] - 22s 10ms/step - loss: 0.0746 - acc: 0.9747 - val_loss: 0.4188 - val_acc: 0.8884\n",
+      "3446/3446 [==============================] - 33s 10ms/step - loss: 0.3294 - acc: 0.8897 - val_loss: 0.4280 - val_acc: 0.8486\n",
       "Epoch 4/100\n",
-      "2257/2257 [==============================] - 22s 10ms/step - loss: 0.0217 - acc: 0.9929 - val_loss: 0.2662 - val_acc: 0.9124\n",
+      "3446/3446 [==============================] - 33s 10ms/step - loss: 0.1979 - acc: 0.9350 - val_loss: 0.4229 - val_acc: 0.8721\n",
       "Epoch 5/100\n",
-      "2257/2257 [==============================] - 22s 10ms/step - loss: 0.0201 - acc: 0.9916 - val_loss: 0.4474 - val_acc: 0.8685\n",
+      "3446/3446 [==============================] - 33s 10ms/step - loss: 0.1125 - acc: 0.9649 - val_loss: 0.3364 - val_acc: 0.9008\n",
       "Epoch 6/100\n",
-      "2257/2257 [==============================] - 22s 10ms/step - loss: 0.0660 - acc: 0.9801 - val_loss: 0.3546 - val_acc: 0.8924\n",
+      "3446/3446 [==============================] - 33s 10ms/step - loss: 0.0402 - acc: 0.9887 - val_loss: 0.3846 - val_acc: 0.8903\n",
       "Epoch 7/100\n",
-      "2257/2257 [==============================] - 22s 10ms/step - loss: 0.0279 - acc: 0.9907 - val_loss: 0.3825 - val_acc: 0.8845\n",
-      "Epoch 00007: early stopping\n"
+      "3446/3446 [==============================] - 33s 10ms/step - loss: 0.0349 - acc: 0.9867 - val_loss: 0.4095 - val_acc: 0.8903\n",
+      "Epoch 8/100\n",
+      "3446/3446 [==============================] - 33s 10ms/step - loss: 0.0440 - acc: 0.9840 - val_loss: 0.4266 - val_acc: 0.8877\n",
+      "Epoch 00008: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fde80129630>"
+       "<keras.callbacks.History at 0x7f9883d43ba8>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model2.fit(X_train, y_train, epochs=100, verbose=1, validation_data=(X_test,y_test),callbacks=callbacks_list)"
+    "model2.fit(X_train2, y_train2, epochs=100, verbose=1, validation_data=(X_test2,y_test2),callbacks=callbacks_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[46,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0, 37,  2,  0,  0,  0,  7,  0,  0],\n",
+       "       [ 0,  1, 30,  0,  1,  0,  0,  0,  0],\n",
+       "       [ 0,  6,  0, 33,  2,  0,  2,  4,  0],\n",
+       "       [ 0,  1,  1,  0, 43,  2,  1,  0,  1],\n",
+       "       [ 1,  0,  0,  0,  2, 24,  1,  2,  1],\n",
+       "       [ 0,  2,  1,  0,  0,  0, 41,  1,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  1,  0, 46,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0, 40]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = model2.predict_classes(X_test2) \n",
+    "y_test2_class= [np.where(r==1)[0][0] for r in y_test2]\n",
+    "\n",
+    "confusion_matrix( y_test2_class, predictions )"
    ]
   },
   {
@@ -300,11 +461,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model2.save('model_03_6ppl_v2.h5')"
+    "model2.save('model_03_9ppl_v1.h5')"
    ]
   },
   {
@@ -323,16 +484,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load_model('model_03_6ppl_v2.h5')"
+    "model = load_model('model_03_9ppl_v1.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,11 +509,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X2,y2,label2 = load_process_data(data_folder = \"../Data/\", divisor = 2, start_at = '../Data/07_mp3-001.png', stop = '../Data/100_mp-000.png')"
+    "array3 ,labels3 = load_data(data_folder=\"../Data/\", divisor = 2,start_at = '../Data/100_mp-000.png',stop = '../Data/103_mp-000.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X3 = convert_img_array_to_X(array3)\n",
+    "y3 = labels_onehot(labels3)"
    ]
   },
   {
@@ -364,11 +535,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train2, X_test2, y_train2, y_test2 = train_test_split(X2,y2,test_size = 0.3,stratify = y2)"
+    "X_train3, X_test3, y_train3, y_test3 = train_test_split(X3,y3,test_size = 0.1,stratify = y3)"
    ]
   },
   {
@@ -380,46 +551,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
     "clf = svm.SVC(kernel='rbf', class_weight='balanced')\n",
     "\n",
-    "X_train2_predict = model3.predict(X_train2)\n",
-    "X_test2_predict = model3.predict(X_test2)\n",
+    "X_train3_predict = model3.predict(X_train3)\n",
+    "X_test3_predict = model3.predict(X_test3)\n",
     "\n",
-    "y_train2_predict = [np.where(r==1)[0][0] for r in y_train2]\n",
-    "y_test2_predict = [np.where(r==1)[0][0] for r in y_test2]\n",
+    "y_train3_predict = [np.where(r==1)[0][0] for r in y_train3]\n",
+    "y_test3_predict = [np.where(r==1)[0][0] for r in y_test3]\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(924, 3)"
+       "(982, 3)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(y_train2)\n",
-    "y_train2.shape"
+    "len(y_train3)\n",
+    "y_train3.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -431,66 +602,73 @@
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf.fit(X_train2_predict, y_train2_predict)"
+    "clf.fit(X_train3_predict, y_train3_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = clf.predict(X_test2_predict)"
+    "predictions = clf.predict(X_test3_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6262626262626263"
+       "0.8818181818181818"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
-    "accuracy_score(y_test2_predict, predictions)"
+    "accuracy_score(y_test3_predict, predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[128,   0,   7],\n",
-       "       [ 22,   0, 119],\n",
-       "       [  0,   0, 120]])"
+       "array([[46,  0,  0],\n",
+       "       [ 0, 23,  0],\n",
+       "       [ 0, 13, 28]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "confusion_matrix(y_test2_predict, predictions)"
+    "confusion_matrix(y_test3_predict, predictions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
